logs/mobility/build.make.006.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘int main(int, char**)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:262:52: error: ‘initializeStuff’ was not declared in this scope
 initializeTimer = mNH.createTimer(ros::Duration(0),initializeStuff, true);
                                                    ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
